homelab-gitops/apps/media/base/lidarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lidarr.thundertest.org
      secretName: lidarr-tls
  rules:
    - host: lidarr.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 80
